@@ -1,4 +1,6 @@
 DIST eix-0.12.4.tar.bz2 273940 RMD160 1a4fac64ff356e75407fdc281f34baca4c93d68f SHA1 711e42bfc2c47dfe1e2943275acdc13048740ea2 SHA256 169cec7acf3c50a58d2d81703c3a08f0e602847a19804f24869d4be9d448a5ab
+DIST eix-0.12.5.tar.bz2 274986 RMD160 b936e38489c74902bf6cb32befd4d32e1abdc2f8 SHA1 291c8c21676afceb362bf680a76e00abc04221d3 SHA256 e4e724cb63f0b4ae64f969742e85e2f54f6ed4013dc7b6d165a9e82c37eac412
 EBUILD eix-0.12.4.ebuild 1383 RMD160 d0720c6eb4610898fd9812953744877b38606614 SHA1 2a68261628913b8310fb667c8e9fd0e77c1029ab SHA256 4c7da44bc29bc5f7414afacc88870974b89d153118640012253aa16a0d8f4900
-MISC ChangeLog 26504 RMD160 d9ff983881e938c5b1b89f39846d9d5723fd7ccb SHA1 950071e22c0eb1827df046f15989a9fa4e7616bb SHA256 bd23ac6eeb51c2e1b61e18a4742e38f46ce5d0572a9b24e565cc8f64e8dc897d
+EBUILD eix-0.12.5.ebuild 1359 RMD160 5270288e5d063d11e0714904282062ddd00381ee SHA1 c716b1a10fa31d0a732278d02b246d0c859515dc SHA256 b90de6565b95a3aa3affab34a5d005fc91639926c63bce7deb193e3409e3a1fb
+MISC ChangeLog 26592 RMD160 57a8d047d8f3625226e9b752189e89206082475f SHA1 219ff41145d3539bdcbac453c33c67cb80bc32bc SHA256 1547326c12c64561c2b5f20d1a588f2cc0c5ee1372a855327ff0060ba2d08d7c
 MISC metadata.xml 377 RMD160 0831dfe5d1a90d9f966642bd5bcd168001e5fa17 SHA1 b2c52a0692cda43143e4c0c33f877e662c1290b7 SHA256 b08b2599d653d25a680efdff696cd7fec998835fc0ab5dc7ff64d28d288c2c40
