@@ -1,6 +1,9 @@
 # ChangeLog for app-portage/eix
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.217 2008/04/13 20:57:04 genstef Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/eix/ChangeLog,v 1.219 2008/05/13 14:19:32 genstef Exp $
+
+  13 May 2008; Stefan Schweizer <genstef@gentoo.org> eix-0.12.5.ebuild:
+  version bump
 
 *eix-0.12.4 (13 Apr 2008)
 
